--- a/Client/app/scripts/layouts/footer/footer.html
+++ b/Client/app/scripts/layouts/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer position-static top-100 start-50">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
