add h-100 to sort button

--- a/Client/app/scripts/layouts/clientFilter/clientFilter.html
+++ b/Client/app/scripts/layouts/clientFilter/clientFilter.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="col-1 d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-outline-secondary w-100 d-flex align-items-center justify-content-center" data-bs-toggle="modal" data-bs-target="#filterClient">
+            <button type="button" class="btn btn-outline-secondary w-100 h-100 d-flex align-items-center justify-content-center" data-bs-toggle="modal" data-bs-target="#filterClient">
                 <img src="images/bootstrap-icon/filter.svg" alt="">
             </button>
         </div>
