--- a/Client/app/scripts/layouts/clinicFilter/clinicFilter.html
+++ b/Client/app/scripts/layouts/clinicFilter/clinicFilter.html
@@ -7,7 +7,7 @@
             <option class="dropdown-item">Country</option>
         </select>
 
-        <input type="text" class="form-control" aria-label="Text input with 2 dropdown buttons" id="searchValue" name="searchValue">
+        <input type="text" class="form-control" aria-label="Text input with dropdown buttons" id="searchValue" name="searchValue">
         <button type="submit" class="btn btn-outline-secondary">
             <img src="images/bootstrap-icon/search.svg" alt="search image">
         </button>
