--- a/Client/app/styles/main.css
+++ b/Client/app/styles/main.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 footer-app {
   clear: both;
