fix dynamic header to retain information. revert to check page loading back to old

--- a/Client/app/scripts/layouts/header/header.html
+++ b/Client/app/scripts/layouts/header/header.html
@@ -14,7 +14,7 @@
         </div>
 
 
-        <div class="navbar-nav ms-auto"> 
+        <div class="navbar-nav ms-auto" ng-if="headerAppCtrl.loggedIn"> 
             <a class="nav-link" href="#!/">
                 <img src="images/default/default-pfp.png" alt="User Profile" width="50" height="50" class="d-inline-block"> 
                 {{ headerAppCtrl.username }}
