--- a/Client/app/scripts/layouts/header/header.html
+++ b/Client/app/scripts/layouts/header/header.html
@@ -15,7 +15,7 @@
 
 
         <div class="navbar-nav ms-auto" ng-if="headerAppCtrl.loggedIn"> 
-            <a class="nav-link" href="#!/">
+            <a class="nav-link" href="{{headerAppCtrl.linkProfile}}">
                 <img src="images/default/default-pfp.png" alt="User Profile" width="50" height="50" class="d-inline-block"> 
                 {{ headerAppCtrl.username }}
             </a>
