--- a/Client/app/scripts/layouts/header/header.html
+++ b/Client/app/scripts/layouts/header/header.html
@@ -14,11 +14,13 @@
         </div>
 
 
-        <div class="navbar-nav ms-auto" ng-if="headerAppCtrl.loggedIn"> 
-            <a class="nav-link" href="{{headerAppCtrl.linkProfile}}">
+        <div class="navbar-nav ms-auto"> 
+            <a class="nav-link" href="{{headerAppCtrl.linkProfile}}" ng-if="headerAppCtrl.loggedIn">
                 <img src="images/default/default-pfp.png" alt="User Profile" width="50" height="50" class="d-inline-block"> 
                 {{ headerAppCtrl.username }}
             </a>
+
+            <a href="#!/clientLogin" class="btn btn-outline-dark" ng-if="!headerAppCtrl.loggedIn">Login</a>
         </div>
     </div>
   </div>
