--- a/Client/app/scripts/layouts/notActivated/notActivated.html
+++ b/Client/app/scripts/layouts/notActivated/notActivated.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
     <div class="text-center">
         <h1 class="display-1 fw-bold">Opps!</h1>
-        <p class="fs-3"> Your account has been <span class="text-danger">{{ notActivatedCtrl.accountStatus }}</span>, not yet <span class="text-danger">activated!</span></p>
+        <p class="fs-3"> Your account has been <span class="text-danger">{{ notActivatedCtrl.accountStatus }}</span> and not yet <span class="text-danger">activated!</span></p>
         <p class="lead">
             Please contact our support for more information
         </p>
